--- a/capp/templates/header.html
+++ b/capp/templates/header.html
@@ -18,7 +18,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li>
           <p class="navbar-btn">
-            {% if session.user_id %}
+            {% if g.user %}
             <a href="{{url_for('logout')}}"
                class="btn">
               Logout
