--- a/capp/templates/login.html
+++ b/capp/templates/login.html
@@ -20,6 +20,7 @@
       <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6">
+          <!-- todo: use wtforms -->
           <form method="post">
             <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
             <div class="form-group">
