--- a/capp/templates/header.html
+++ b/capp/templates/header.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="{{url_for('home')}}" class="navbar-brand">
+      <a href="{{url_for('.home')}}" class="navbar-brand">
         Catalog App
       </a>
     </div>
@@ -19,12 +19,12 @@
         <li>
           <p class="navbar-btn">
             {% if g.user %}
-            <a href="{{url_for('logout')}}"
+            <a href="{{url_for('auth.logout')}}"
                class="btn">
               Logout
             </a>
             {% else %}
-            <a href="{{url_for('login')}}"
+            <a href="{{url_for('auth.login')}}"
                class="btn">
               Login
             </a>
