--- a/capp/templates/home.html
+++ b/capp/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "lists.html" %}
 {% block items %}
 {% if g.user %}
-<a class="body-bold" href="{{url_for('item_new')}}">
+<a class="body-bold" href="{{url_for('.item_new')}}">
   Add item
 </a>
 {% endif %}
@@ -9,7 +9,7 @@
 <ul>
   {% for item in items %}
   <li>
-    <a href="{{url_for('item_detail', category_name=item.category.name, item_title=item.title)}}">
+    <a href="{{url_for('.item_detail', category_name=item.category.name, item_title=item.title)}}">
       {{item.title}}
     </a>
     <span>
