--- a/capp/templates/items.html
+++ b/capp/templates/items.html
@@ -4,7 +4,7 @@
 <ul>
   {% for item in items %}
   <li>
-    <a href="{{url_for('item_detail', category_name=item.category.name, item_title=item.title)}}">
+    <a href="{{url_for('.item_detail', category_name=item.category.name, item_title=item.title)}}">
       {{item.title}}
     </a>
   </li>
