--- a/capp/templates/lists.html
+++ b/capp/templates/lists.html
@@ -8,7 +8,7 @@
       <ul>
         {% for category in categories %}
         <li>
-          <a href="{{url_for('items_list', category_name=category.name)}}">
+          <a href="{{url_for('.items_list', category_name=category.name)}}">
             {{category.name}}
           </a>
         </li>
